[package]
name = "minesweeper-wasm"
version = "0.1.0"
authors = ["Martin Stefanak <zteffi@gmail.com>"]
description = "A sample project with wasm and rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/zteffi/minesweeper-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = {version =  "0.3",  features = ["wasm_js"] }
